feat(extension): deliver v2 strict enforcement with custom sites and diagnostics
Refactor the MV3 service worker to use hybrid storage (sync settings + local runtime), dynamic site matching, strict tab/webNavigation enforcement, warning notifications, break-glass PIN workflows, and diagnostics/event logging APIs.

Add new options and diagnostics pages, redesign popup and block page for break-glass and live status controls, update content overlay behavior, broaden manifest permissions for custom domains, and refresh docs.

--- a/src/block/block.html
+++ b/src/block/block.html
@@ -12,7 +12,17 @@
         <h1 id="title">Temporarily blocked</h1>
         <p id="reason" class="reason"></p>
         <p id="countdown" class="countdown"></p>
-        <p id="hint" class="hint">You can change limits from the extension popup.</p>
+
+        <form id="unlock-form" class="unlock-form">
+          <label>
+            Break-glass PIN
+            <input id="pin" type="password" minlength="4" autocomplete="off" required />
+          </label>
+          <button type="submit">Unlock Temporarily</button>
+        </form>
+
+        <button id="retry" type="button" class="secondary">Retry Opening Site</button>
+        <p id="feedback" class="feedback"></p>
       </section>
     </main>
 
